--- a/_posts/2017-06-25-vue-走进vue(一).md
+++ b/_posts/2017-06-25-vue-走进vue(一).md
@@ -1,4 +1,15 @@
-# 这里开始vue的学习
+---
+layout: post
+title:  "走进vue(一)"
+date:   2017-06-25
+excerpt: ""
+tag:
+- vue
+comments: true
+---
+
+
+## 这里开始vue的学习
 
 >学习vue应该先从基本语法入手，但是这部分可能学起来比较枯燥。
 
