--- a/_posts/2017-06-25-vue-走进vue(一).md
+++ b/_posts/2017-06-25-vue-走进vue(一).md
@@ -29,7 +29,7 @@ comments: true
     // hot：热加载（自动刷新）
     // port：指定服务器端口
     // host：指定访问的host
-    webpack-dev-server --line --hot --port 3000
+    webpack-dev-server --inline --hot --port 3000
 
     ```
     
