fix:vue-global-bus的使用

--- a/_posts/2017-07-08-vue-走进vue(二).md
+++ b/_posts/2017-07-08-vue-走进vue(二).md
@@ -22,13 +22,13 @@ comments: true
 
 2. 创建一个send.vue用于发送消息
     //send.vue
-    <template>
-    <div>
-        <input type="text" v-model="val">
-        <button @click="send">send message</button>
-    </div>
-    </template>
-    <script>
+    &lt;template&gt;
+    &lt;div&gt;
+        &lt;input type="text" v-model="val"&gt;
+        &lt;button @click="send">send message&lt;/button&gt;
+    &lt;/div&gt;
+    &lt;/template&gt;
+    &lt;script&gt;
     import bus from '../bus';
     module.exports = {
         data() {
@@ -42,15 +42,15 @@ comments: true
             }
         }
     }
-    </script>
-    <style></style>
+    &lt;/script&gt;
+    &lt;style&gt;&lt;/style&gt;
 
 3. 创建一个receive.vue用于接收消息
     //receive.vue
-    <template>
-    <p>{{val}}</p>
-    </template>
-    <script>
+    &lt;template&gt;
+    &lt;p&gt;{{val}}&lt;/p&gt;
+    &lt;/template&gt;
+    &lt;script&gt;
     import bus from '../bus';
     module.exports = {
         created() {
@@ -62,8 +62,8 @@ comments: true
             }
         }
     }
-    </script>
-    <style></style>
+    &lt;/script&gt;
+    &lt;style&gt;&lt;/style&gt;
 
 4. 添加至页面中，然后文本框中输入相关内容。点击send message按钮则会展示在<p></p>中显示内容。
 
