fix:vue-global-bus的使用

--- a/_posts/2017-07-08-vue-走进vue(二).md
+++ b/_posts/2017-07-08-vue-走进vue(二).md
@@ -15,13 +15,13 @@ comments: true
 那么，下面就从vue-global-bus入手学习vue的组件通讯。
 
 ### 关于使用Vue global bus进行组件间的通讯
-1. 创建一个bus.js文件
+创建一个bus.js文件
 
-    //bus.js
+    // bus.js
     import Vue from 'vue';
     export default new Vue();
 
-2. 创建一个send.vue用于发送消息
+创建一个send.vue用于发送消息
 
     //send.vue
     &lt;template&gt;
@@ -47,7 +47,7 @@ comments: true
     &lt;/script&gt;
     &lt;style&gt;&lt;/style&gt;
 
-3. 创建一个receive.vue用于接收消息
+创建一个receive.vue用于接收消息
 
     //receive.vue
     &lt;template&gt;
@@ -68,7 +68,7 @@ comments: true
     &lt;/script&gt;
     &lt;style&gt;&lt;/style&gt;
 
-4. 添加至页面中，然后文本框中输入相关内容。点击send message按钮则会展示在<p></p>中显示内容。
+添加至页面中，然后文本框中输入相关内容。点击send message按钮则会展示在<p></p>中显示内容。
 
 ## 结尾
 从上面的例子可以简单的看出，为什么中大型不适合使用vue-global-bus。高度耦合确实不利于大型项目构建。
