fix:vue-global-bus的使用

--- a/_posts/2017-07-08-vue-走进vue(二).md
+++ b/_posts/2017-07-08-vue-走进vue(二).md
@@ -17,20 +17,20 @@ comments: true
 ### 关于使用Vue global bus进行组件间的通讯
 创建一个bus.js文件
 
-    // bus.js
+    //bus.js
     import Vue from 'vue';
     export default new Vue();
 
 创建一个send.vue用于发送消息
 
     //send.vue
-    &lt;template&gt;
-    &lt;div&gt;
-        &lt;input type="text" v-model="val"&gt;
-        &lt;button @click="send">send message&lt;/button&gt;
-    &lt;/div&gt;
-    &lt;/template&gt;
-    &lt;script&gt;
+    <template>
+    <div>
+        <input type="text" v-model="val">
+        <button @click="send">send message</button>
+    </div>
+    </template>
+    <script>
     import bus from '../bus';
     module.exports = {
         data() {
@@ -44,16 +44,16 @@ comments: true
             }
         }
     }
-    &lt;/script&gt;
-    &lt;style&gt;&lt;/style&gt;
+    </script>
+    <style></style>
 
 创建一个receive.vue用于接收消息
 
     //receive.vue
-    &lt;template&gt;
-    &lt;p&gt;{{val}}&lt;/p&gt;
-    &lt;/template&gt;
-    &lt;script&gt;
+    <template>
+    <p>{{val}}</p>
+    </template>
+    <script>
     import bus from '../bus';
     module.exports = {
         created() {
@@ -65,10 +65,10 @@ comments: true
             }
         }
     }
-    &lt;/script&gt;
-    &lt;style&gt;&lt;/style&gt;
+    </script>
+    <style></style>
 
-添加至页面中，然后文本框中输入相关内容。点击send message按钮则会展示在<p></p>中显示内容。
+添加至页面中，然后文本框中输入相关内容。点击send message按钮则会展示在&lt;p&gt;&lt;/p&gt;中显示内容。
 
 ## 结尾
 从上面的例子可以简单的看出，为什么中大型不适合使用vue-global-bus。高度耦合确实不利于大型项目构建。
