add:Getters&&Mutation

--- a/_posts/2017-07-08-vue-走进vue(三).md
+++ b/_posts/2017-07-08-vue-走进vue(三).md
@@ -67,6 +67,7 @@ action派发mutation，mutation触发state的改变，state改变更新组件。
 
 在注册组件时传入，在组件内部可以使用this.$store调用。
 
+## mapState
 关于mapState使用，极大的简化了调用操作的写法。
     
     module.exports = {
