--- a/_posts/2017-07-08-vue-走进vue(四).md
+++ b/_posts/2017-07-08-vue-走进vue(四).md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "走进vue(三) - vuex - Getters&&Mutation"
+title:  "走进vue(四) - vuex - Getters&&Mutation"
 date:   2017-07-08
 excerpt: ""
 tag:
