--- a/_posts/2017-07-08-vue-走进vue(五).md
+++ b/_posts/2017-07-08-vue-走进vue(五).md
@@ -13,8 +13,8 @@ comments: true
 这里重新引用一下官网的图片。
 
 Actions与Mutation虽然都可以被直接调用，但是却完全不同。
-1. Action 提交的是 mutation，而不是直接变更状态。
-2. Action 可以包含任意异步操作。
+*Action 提交的是 mutation，而不是直接变更状态。
+*Action 可以包含任意异步操作。
 
     const store = new vuex.Store({
         state: {
